pixelfed/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o chart
    kompose.version: 1.29.0 (b6b708b6)
    kompose.volume.size: 10G
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
  
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o chart
        kompose.version: 1.29.0 (b6b708b6)
        kompose.volume.size: 10G
      creationTimestamp: null
      labels:
        io.kompose.network/pixelfed-external: "true"
        io.kompose.network/pixelfed-internal: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - gosu
            - www-data
            - php
            - artisan
            - horizon
          image: registry:5000/pixelfed
          name: worker
          resources: {}
          volumeMounts:
            - mountPath: /var/www/storage
              name: app-storage
            - mountPath: /etc/ssl/certs
              name: k3s-bundle
      restartPolicy: Always
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-storage
        - name: k3s-bundle
          configMap:
            name: k3s-bundle
status: {}
